--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://www.invokegeek.com/jobs/site-reliability-devops-engineer-manufacturing-systems/'>Site Reliability/DevOps Engineer, Manufacturing Systems ? invokeGeek</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States  Fremont, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/rightpoint/job/orbtbfw0'>Rightpoint Careers - Senior Site Reliability Engineer</a></h5> 
@@ -198,7 +198,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://finanzchef24.join.com/jobs/464422-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/464422-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -220,7 +220,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -232,7 +232,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -248,7 +248,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ofnmbfwT'>WebMD Careers - Software Developer, Site Reliability</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -268,7 +268,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -375,7 +375,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  San Mateo</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -383,11 +383,11 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=1c2833521'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=1c2833521'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -411,7 +411,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -419,7 +419,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Experienced Site Reliability Engineer. Remote, Multiple Countries; Full Time; 
 Engineering; Experienced. Share. Theorem is a software consultancy that 
